--- a/env.example
+++ b/env.example
@@ -1,6 +1,5 @@
-DEEPGRAM_API_KEY=your_deepgram_api_key
-OPENAI_API_KEY=your_openai_api_key
-CARTESIA_API_KEY=your_cartesia_api_key
-
-# Optional: Connect via Daily WebRTC locally
-DAILY_API_KEY=your_daily_api_key
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+CARTESIA_API_KEY=your_cartesia_api_key_here
+LM_STUDIO_BASE_URL=http://localhost:1234/v1
+MODEL_NAME=your_model_name_here
